# ravid-backend-assignment-round

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  compose.ci.yaml  compose.yaml  manage.py  pyproject.toml
.agents/: AGENTS.md  MISTAKE.md  WORKFLOW.md
.agents/guidelines/: ai-programming-guidelines.md  assessment-delivery-guidelines.md  code-review-guidelines.md  llm-provider-guidelines.md
.agents/references/: assessment-decisions.md  assessment-validation.md  source-links.md  submission-checklist.md
.agents/scripts/: check_assessment_coverage.py  check_mistake_recurrence.py  validate_agents.py
.agents/skills/agent-self-audit/: SKILL.md
.agents/skills/django-api-delivery/: SKILL.md
.agents/skills/observability-compose-delivery/: SKILL.md
.agents/skills/rag-chat-retrieval/: SKILL.md
.agents/skills/rag-ingestion-pipeline/: SKILL.md
.agents/skills/ravid-orchestrator/: SKILL.md
.agents/skills/review-mistake-guard/: SKILL.md
.agents/templates/: mistake-entry.md  plan.md  pr-review.md  pull_request.md  spec.md  test_matrix.md  validation-report.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pr-ci.yml
apps/: __init__.py
apps/accounts/: __init__.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/common/: __init__.py  apps.py  env.py  exceptions.py  middleware.py  urls.py  views.py
apps/documents/: __init__.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/documents/migrations/: 0001_initial.py
apps/rag/: __init__.py  apps.py  conversations.py  embeddings.py  llm.py  models.py  pipeline.py  retrieval.py  serializers.py  tasks.py  urls.py  vectorstore.py  views.py
apps/rag/migrations/: 0001_initial.py  0002_conversation_message.py
config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  local.py  production.py  test.py
docker/alloy/: config.alloy
docker/django/: Dockerfile  entrypoint.sh
docker/grafana/dashboards/: overview.json
docker/grafana/provisioning/dashboards/: observability.yaml
docker/loki/: config.yaml
docs/00-anchor/: brd.md  glossary.md  srs.md  task.md
docs/01-architecture/: api_contract.yaml  database.md  docker.md  observability.md  project_structure.md  system_context.md  testing.md
docs/02-features/01-foundation/: pull_request.md  test_matrix.md  validation-report.md
docs/02-features/02-authentication/: pull_request.md  test_matrix.md  validation-report.md
docs/02-features/03-document-upload/: pull_request.md  test_matrix.md  validation-report.md
docs/02-features/04-ingestion-pipeline/: pull_request.md  test_matrix.md  validation-report.md
docs/02-features/05-rag-chat/: pull_request.md  test_matrix.md  validation-report.md
docs/02-features/07-docker-and-delivery/: pull_request.md  test_matrix.md  validation-report.md
docs/02-features/08-bonus/: pull_request.md  test_matrix.md  validation-report.md
docs/api/: README.md  ravid.postman_collection.json
openspec/: config.yaml
openspec/changes/archive/2026-06-19-s01-foundation-django-langchain-bootstrap/specs/platform-foundation/: spec.md
openspec/changes/archive/2026-06-19-s02-authentication-register-login-jwt/: proposal.md
openspec/changes/archive/2026-06-19-s02-authentication-register-login-jwt/specs/authentication/: spec.md
openspec/changes/archive/2026-06-19-s03-document-upload-pdf-txt-md/: proposal.md
openspec/changes/archive/2026-06-19-s04-ingestion-pipeline-chunk-embed-chroma/: proposal.md
openspec/changes/archive/2026-06-20-s05-rag-chat-query-openrouter/: design.md  proposal.md
openspec/changes/archive/2026-06-20-s05-rag-chat-query-openrouter/specs/rag-chat/: spec.md
openspec/changes/archive/2026-06-20-s07-docker-and-delivery-compose-ci/: design.md  proposal.md
openspec/changes/archive/2026-06-20-s08-bonus-chat-continuation-sse/: design.md  proposal.md
openspec/changes/s01-foundation-django-langchain-bootstrap/: design.md  proposal.md  tasks.md
openspec/changes/s02-authentication-register-login-jwt/: design.md  tasks.md
openspec/changes/s03-document-upload-pdf-txt-md/: design.md  tasks.md
openspec/changes/s03-document-upload-pdf-txt-md/specs/document-management/: spec.md
openspec/changes/s04-ingestion-pipeline-chunk-embed-chroma/: design.md  tasks.md
openspec/changes/s04-ingestion-pipeline-chunk-embed-chroma/specs/document-ingestion/: spec.md
openspec/changes/s05-rag-chat-query-openrouter/: tasks.md
openspec/changes/s07-docker-and-delivery-compose-ci/: tasks.md
openspec/changes/s07-docker-and-delivery-compose-ci/specs/docker-delivery/: spec.md
openspec/changes/s08-bonus-chat-continuation-sse/: tasks.md
openspec/specs/authentication/: spec.md
openspec/specs/chat-bonus/: spec.md
openspec/specs/docker-delivery/: spec.md
openspec/specs/document-ingestion/: spec.md
openspec/specs/document-management/: spec.md
openspec/specs/platform-foundation/: spec.md
openspec/specs/rag-chat/: spec.md
scripts/ci/: run_container_validation.sh  run_python_tests.sh  run_repo_checks.sh
scripts/dev/: run_local.sh
tests/: __init__.py  conftest.py
tests/integration/: test_auth_edge_cases.py  test_authentication_api.py  test_chat_api.py  test_chat_continuation_api.py  test_chat_stream_api.py  test_delivery.py  test_document_upload_api.py  test_documents_edge_cases.py  test_ingestion_api.py  test_ingestion_edge_cases.py  test_isolation_matrix.py
tests/smoke/: test_endpoints_absent.py  test_foundation.py
tests/unit/: test_authentication_units.py  test_chat_bonus_units.py  test_chat_units.py  test_common_infra.py  test_coverage_gaps.py  test_document_units.py  test_env.py  test_llm_openrouter.py  test_pipeline_units.py  test_rag_units.py  test_vectorstore_modes.py
(+1 files in other folders)
