# pyproject.toml — RAVID backend
# Slice 00 added [tool.ruff] and [tool.commitizen]; slice 01 adds the rest.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ravid-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<5.3",
    "djangorestframework",
    "djangorestframework-simplejwt",
    "drf-spectacular",
    "celery[redis]",
    "redis",
    "psycopg[binary]",
    "python-json-logger",
    "gunicorn",
]

[project.optional-dependencies]
rag = [
    "langchain",
    "langchain-text-splitters",
    "langchain-community",
    "langchain-huggingface",
    "sentence-transformers",
    "chromadb",
    "pypdf",
    "openai",
]
dev = [
    "pytest",
    "pytest-django",
    "pytest-cov",
    "ruff",
    "pre-commit",
]

[tool.setuptools.packages.find]
include = ["apps*", "config*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]

# ---------------------------------------------------------------------------
# Preserved from slice 00
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["apps", "config", "tests", ".agents/scripts"]
extend-exclude = ["**/migrations/*", ".venv", "openspec", ".claude"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, UP pyupgrade, B bugbear,
# C4 comprehensions, SIM simplify, DJ flake8-django
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "DJ"]
ignore = ["E501"] # line length is handled by the formatter

[tool.ruff.lint.per-file-ignores]
"**/migrations/*" = ["E", "F", "B"]
".agents/scripts/*" = ["DJ"] # standalone stdlib scripts, not Django

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
major_version_zero = true
update_changelog_on_bump = true
